# randombs0

./: CMakeLists.txt
include/: object.h  objectdata.h  objects.h  program.h  shader.hpp
include/glad/: glad.h
shaders/: 1.fragmentshader  1.vertexshader
src/: glad.c  main.cpp  main0.cpp  object.cpp  objectdata.cpp  objects.cpp  program.cpp  shader.cpp
